<resources>
    <string name="app_name">PhotoOrganizer</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="todo">TODO</string>
    <string name="management">management</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="group">Group</string>
    <string name="settings">Settings</string>
    <string name="new_group">NEW GROUP</string>
    <string name="group_name">Group name:</string>
    <string name="group_duration">Group duration:</string>
    <string name="minutes">minutes</string>
    <string name="create">CREATE</string>
    <string name="already_registered">Already registered?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_new">SIGN IN</string>
    <string name="for_sign_up">Not a member?</string>
    <string name="register_new">Register</string>
    <string name="low_storage_error">Detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_settings">Settings</string>
    <string name="leave_button">LEAVE</string>
    <string name="view_group_information">Group Information</string>
    <string name="view_group_name">Name</string>
    <string name="view_group_expiration">Expiration</string>
    <string name="view_group_members">Members</string>
    <string name="add_member">ADD MEMBER</string>
    <string name="add_user_text">Scan to join!</string>

    <!-- Strings related to Settings -->
    <string name="pref_sync_settings_title">Resolution for uploading and downloading pictures</string>
    <string name="pref_mdata_sync">While on mobile data</string>
    <string name="pref_wifi_sync">While on wifi</string>


    <string-array name="pref_mdata_sync_titles">
        <item>Low (640 x 480 pixels)</item>
        <item>High (1280 x 960 pixels)</item>
        <item>Full</item>
    </string-array>
    <string-array name="pref_mdata_sync_values">
        <item>Low</item>
        <item>High</item>
        <item>Full</item>
    </string-array>

    <string-array name="pref_wifi_sync_titles">
        <item>Low (640 x 480 pixels)</item>
        <item>High (1280 x 960 pixels)</item>
        <item>Full</item>
    </string-array>
    <string-array name="pref_wifi_sync_values">
        <item>Low</item>
        <item>High</item>
        <item>Full</item>
    </string-array>
    <string name="privatefol">Private</string>
    <string name="zero0">0</string>
    <string name="log_out">Log Out</string>
    <string name="managementText">Management</string>
</resources>
