<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aalto.asad.photoorganizer.ViewGroup">

    <TextView
        android:id="@+id/groupInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/view_group_information"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/view_group_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupInfoTitle" />

    <TextView
        android:id="@+id/groupNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/nameLabel"
        app:layout_constraintLeft_toLeftOf="@+id/groupExpirationText" />

    <TextView
        android:id="@+id/ExpirationLabel"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/view_group_expiration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <TextView
        android:id="@+id/groupExpirationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ExpirationLabel"
        app:layout_constraintStart_toEndOf="@+id/ExpirationLabel" />

    <TextView
        android:id="@+id/membersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/view_group_members"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExpirationLabel" />

    <ListView
        android:layout_width="368dp"
        android:layout_height="281dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMemberButton" />

    <Button
        android:id="@+id/addMemberButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_member"
        app:layout_constraintBottom_toBottomOf="@+id/membersLabel"
        app:layout_constraintLeft_toLeftOf="@+id/groupExpirationText"
        app:layout_constraintTop_toTopOf="@+id/membersLabel" />

</android.support.constraint.ConstraintLayout>
