<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="172dp"
        android:layout_height="215dp"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textGalleryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="175dp"
            android:text="@string/privatefol" />

        <TextView
            android:id="@+id/textTotalPictures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="192dp"
            android:text="@string/zero0" />

        <ImageView
            android:id="@+id/cloudPicture"
            android:layout_width="55dp"
            android:layout_height="34dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="175dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/cloud"
            app:srcCompat="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/groupImages"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@mipmap/ic_launcher" />
    </android.support.v7.widget.CardView>
</LinearLayout>